--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
             <!-- Best Scorer -->
             <div class="best-scorer ml-0 width-7">
               <div class="text-area">
-                <h2>Best Player</h2>
-                <p>Best Player of Copa America 2021</p>
+                <h2>Best Scorer</h2>
+                <p>Best Scorer of Copa America 2021</p>
               </div>
               <!-- Player's Image -->
               <div class="player">
